k8s/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: default
  labels:
    app: website
spec:
  selector:
    app: website
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
